--- a/pur_beurre_project/supersub/templates/supersub/create_account.html
+++ b/pur_beurre_project/supersub/templates/supersub/create_account.html
@@ -6,7 +6,7 @@
         <div class="container h-100">
             <div class="row h-100 align-items-center justify-content-center text-center">
                 <div class="col-lg-8 align-self-center mb-2">
-                    <h2 class="text-white-75 mb-4"> Créer compte </h2>
+                    <h2 class="text-white-75 mb-4"> {{ message }} </h2>
                 </div>
             </div>
         </div>
@@ -27,7 +27,7 @@
                                 <input type="password" id="password" class="form-control text-dark" value="********" required>
                             </div>
                             <div class="col-8 pl-2 pt-4">
-                                <button type="submit" id="create_account_button" class="text-right btn btn-primary">Créer compte</button>
+                                <button type="submit" id="create_account_button" class="text-right btn btn-primary">{{ button_message }}</button>
                             </div>
                         </div>
                     </div>
