--- a/pur_beurre_project/supersub/templates/supersub/results.html
+++ b/pur_beurre_project/supersub/templates/supersub/results.html
@@ -1,236 +1,164 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>P8 - Pur-beurre</title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/img/logo_pur_beurre-favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Scope+One" rel="stylesheet" type="text/css" />
-        <!-- Third party plugin CSS-->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
-        <link href="css/my_styles.css" rel="stylesheet" />
-    </head>
-    <body id="page-top">
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
-            <div class="container">
-                <img src="assets/img/logo_pur_beurre.png" width="40" height="30" alt="Pur beurre logo">
-                <a class="navbar-brand js-scroll-trigger pl-2" href="#page-top">Pur Beurre</a>
-                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-                    data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-                    aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ml-auto my-2 my-lg-0 align-items-center">
-                        <form class="d-flex pl-4 pr-4" action="index.html" method="post" novalidate>
-                            <input type="text" id="question" class="form-control mybox" value="Chercher" aria-label="Search"
-                                required>
-                        </form>
-                        <li class="nav-item nav-link js-scroll-trigger navbar-brand">
-                            <a href="#services">
-                                <i class="fas fa-user" id="user_icon"></i>
-                            </a>
-                        </li>
-                        <li class="nav-item nav-link js-scroll-trigger navbar-brand">
-                            <a href="#portfolio">
-                                <i class="fas fa-carrot" data-fa-transform="rotate-315"></i>
-                            </a>
-                        </li>
-                        <li class="nav-item nav-link js-scroll-trigger navbar-brand">
-                            <a href="#contact">
-                                <i class="fas fa-sign-out-alt"></i>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <!-- Masthead-->
-        <header class="searchhead" id="searched">
-            <div class="container h-100">
-                <div class="row h-100 align-items-center justify-content-center text-center"> 
-                    <div class="col-lg-8 align-self-center mb-2">
-                        <h2 class="text-white-75 mb-4">[ Aliment cherché ]</h2>
-                    </div>
-                </div>
-            </div>
-        </header>
-        <!-- Services-->
-        <section class="page-section bg-white" id="services">
-            <div class="container">
-                <h4 class="text-dark text-center text-secondary-50 mb-4"> Vous pouvez remplacer cet aliment par:  </h4>
-                <hr class="divider my-4" />
-                <div class="row">
-                    <div class="col-lg-4 col-sm-6 text-center">
-                        <div class="m-4 results-image">
-                            <a href="" class="ele_dark_href">
-                                <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
-                                <p class=" h4 m-1"> aliment 1</p>
-                            </a>
-                            <div class="nutriscore-circle">
-                                <i class="fas fa-circle"></i>
-                            </div>
-                            <div class="nutriscore-letter">
-                                <p>A</p>
-                            </div>
-                            <a href="" class="ele_dark_href">
-                                <p class="mb-0">
-                                    <span>
-                                        <i class="fas fa-save"></i>
-                                    </span>
-                                    Sauvegarder
-                                </p>
-                            </a>
+{% extends 'supersub/base.html' %}
 
+{% block content %}
+
+    {% load static %}
+
+    <!-- Masthead-->
+    <header class="searchhead" id="searched">
+        <div class="container h-100">
+            <div class="row h-100 align-items-center justify-content-center text-center"> 
+                <div class="col-lg-8 align-self-center mb-2">
+                    <h2 class="text-white-75 mb-4">[ Aliment cherché ]</h2>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- Services-->
+    <section class="page-section bg-white" id="services">
+        <div class="container">
+            <h4 class="text-dark text-center text-secondary-50 mb-4"> Vous pouvez remplacer cet aliment par:  </h4>
+            <hr class="divider my-4" />
+            <div class="row">
+                <div class="col-lg-4 col-sm-6 text-center">
+                    <div class="m-4 results-image">
+                        <a href="" class="ele_dark_href">
+                            <img class="img-fluid" src="{% static 'supersub/assets/img/portfolio/thumbnails/1.jpg' %}" alt="" />
+                            <p class=" h4 m-1"> aliment 1</p>
+                        </a>
+                        <div class="nutriscore-circle">
+                            <i class="fas fa-circle"></i>
                         </div>
+                        <div class="nutriscore-letter">
+                            <p>A</p>
+                        </div>
+                        <a href="" class="ele_dark_href">
+                            <p class="mb-0">
+                                <span>
+                                    <i class="fas fa-save"></i>
+                                </span>
+                                Sauvegarder
+                            </p>
+                        </a>
+
                     </div>
-                    <div class="col-lg-4 col-sm-6 text-center">
-                        <div class="m-4 results-image">
-                            <a href="" class="ele_dark_href">
-                                <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
-                                <p class="h4 m-1"> aliment 2</p>
-                            </a>
-                            <div class="nutriscore-circle">
-                                <i class="fas fa-circle"></i>
-                            </div>
-                            <div class="nutriscore-letter">
-                                <p>A</p>
-                            </div>
-                            <a href="" class="ele_dark_href">
-                                <p class="mb-0" href=>
-                                    <span>
-                                        <i class="fas fa-save"></i>
-                                    </span>
-                                    Sauvegarder
-                                </p>
-                            </a>
+                </div>
+                <div class="col-lg-4 col-sm-6 text-center">
+                    <div class="m-4 results-image">
+                        <a href="" class="ele_dark_href">
+                            <img class="img-fluid" src="{% static 'supersub/assets/img/portfolio/thumbnails/1.jpg' %}" alt="" />
+                            <p class="h4 m-1"> aliment 2</p>
+                        </a>
+                        <div class="nutriscore-circle">
+                            <i class="fas fa-circle"></i>
                         </div>
+                        <div class="nutriscore-letter">
+                            <p>A</p>
+                        </div>
+                        <a href="" class="ele_dark_href">
+                            <p class="mb-0" href=>
+                                <span>
+                                    <i class="fas fa-save"></i>
+                                </span>
+                                Sauvegarder
+                            </p>
+                        </a>
                     </div>
-                    <div class="col-lg-4 col-sm-6 text-center">
-                        <div class="m-4 results-image">
-                            <a href="" class="ele_dark_href">
-                                <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
-                                <p class="h4 m-1"> aliment 3</p>
-                            </a>
-                            <div class="nutriscore-circle">
-                                <i class="fas fa-circle"></i>
-                            </div>
-                            <div class="nutriscore-letter">
-                                <p>A</p>
-                            </div>
-                            <a href="" class="ele_dark_href">
-                                <p class="mb-0" href=>
-                                    <span>
-                                        <i class="fas fa-save"></i>
-                                    </span>
-                                    Sauvegarder
-                                </p>
-                            </a>
-                    
+                </div>
+                <div class="col-lg-4 col-sm-6 text-center">
+                    <div class="m-4 results-image">
+                        <a href="" class="ele_dark_href">
+                            <img class="img-fluid" src="{% static 'supersub/assets/img/portfolio/thumbnails/1.jpg' %}" alt="" />
+                            <p class="h4 m-1"> aliment 3</p>
+                        </a>
+                        <div class="nutriscore-circle">
+                            <i class="fas fa-circle"></i>
                         </div>
+                        <div class="nutriscore-letter">
+                            <p>A</p>
+                        </div>
+                        <a href="" class="ele_dark_href">
+                            <p class="mb-0" href=>
+                                <span>
+                                    <i class="fas fa-save"></i>
+                                </span>
+                                Sauvegarder
+                            </p>
+                        </a>
+                
                     </div>
-                    <div class="col-lg-4 col-sm-6 text-center">
-                        <div class="m-4 results-image">
-                            <a href="" class="ele_dark_href">
-                                <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
-                                <p class="h4 m-1"> aliment 4</p>
-                            </a>
-                            <div class="nutriscore-circle">
-                                <i class="fas fa-circle"></i>
-                            </div>
-                            <div class="nutriscore-letter">
-                                <p>A</p>
-                            </div>
-                            <a href="" class="ele_dark_href">
-                                <p class="mb-0" href=>
-                                    <span>
-                                        <i class="fas fa-save"></i>
-                                    </span>
-                                    Sauvegarder
-                                </p>
-                            </a>                    
+                </div>
+                <div class="col-lg-4 col-sm-6 text-center">
+                    <div class="m-4 results-image">
+                        <a href="" class="ele_dark_href">
+                            <img class="img-fluid" src="{% static 'supersub/assets/img/portfolio/thumbnails/1.jpg' %}" alt="" />
+                            <p class="h4 m-1"> aliment 4</p>
+                        </a>
+                        <div class="nutriscore-circle">
+                            <i class="fas fa-circle"></i>
                         </div>
+                        <div class="nutriscore-letter">
+                            <p>A</p>
+                        </div>
+                        <a href="" class="ele_dark_href">
+                            <p class="mb-0" href=>
+                                <span>
+                                    <i class="fas fa-save"></i>
+                                </span>
+                                Sauvegarder
+                            </p>
+                        </a>                    
                     </div>
-                    <div class="col-lg-4 col-sm-6 text-center">
-                        <div class="m-4 results-image">
-                            <a href="" class="ele_dark_href">
-                                <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
-                                <p class="h4 m-1"> aliment 5</p>
-                            </a>
-                            <div class="nutriscore-circle">
-                                <i class="fas fa-circle"></i>
-                            </div>
-                            <div class="nutriscore-letter">
-                                <p>A</p>
-                            </div>
-                            <a href="" class="ele_dark_href">
-                                <p class="mb-0" href=>
-                                    <span>
-                                        <i class="fas fa-save"></i>
-                                    </span>
-                                    Sauvegarder
-                                </p>
-                            </a>
+                </div>
+                <div class="col-lg-4 col-sm-6 text-center">
+                    <div class="m-4 results-image">
+                        <a href="" class="ele_dark_href">
+                            <img class="img-fluid" src="{% static 'supersub/assets/img/portfolio/thumbnails/1.jpg' %}" alt="" />
+                            <p class="h4 m-1"> aliment 5</p>
+                        </a>
+                        <div class="nutriscore-circle">
+                            <i class="fas fa-circle"></i>
                         </div>
+                        <div class="nutriscore-letter">
+                            <p>A</p>
+                        </div>
+                        <a href="" class="ele_dark_href">
+                            <p class="mb-0" href=>
+                                <span>
+                                    <i class="fas fa-save"></i>
+                                </span>
+                                Sauvegarder
+                            </p>
+                        </a>
                     </div>
-                    <div class="col-lg-4 col-sm-6 text-center">
-                        <div class="m-4 results-image">
-                            <a href="" class="ele_dark_href">
-                                <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
-                                <p class="h4 m-1"> aliment 6</p>
-                            </a>
-                            <div class="nutriscore-circle">
-                                <i class="fas fa-circle"></i>
-                            </div>
-                            <div class="nutriscore-letter">
-                                <p>A</p>
-                            </div>
-                            <a href="" class="ele_dark_href">
-                                <p class="mb-0" href=>
-                                    <span>
-                                        <i class="fas fa-save"></i>
-                                    </span>
-                                    Sauvegarder
-                                </p>
-                            </a>
-                    
+                </div>
+                <div class="col-lg-4 col-sm-6 text-center">
+                    <div class="m-4 results-image">
+                        <a href="" class="ele_dark_href">
+                            <img class="img-fluid" src="{% static 'supersub/assets/img/portfolio/thumbnails/1.jpg' %}" alt="" />
+                            <p class="h4 m-1"> aliment 6</p>
+                        </a>
+                        <div class="nutriscore-circle">
+                            <i class="fas fa-circle"></i>
                         </div>
+                        <div class="nutriscore-letter">
+                            <p>A</p>
+                        </div>
+                        <a href="" class="ele_dark_href">
+                            <p class="mb-0" href=>
+                                <span>
+                                    <i class="fas fa-save"></i>
+                                </span>
+                                Sauvegarder
+                            </p>
+                        </a>
+                
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
+
+{% endblock %}
 
 
-        <!-- Footer-->
-        <footer class="bg-dark py-5">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-8 text-center">
-                        <div class="row">
-                            <div class="col-sm-6 align-self-center text-muted"><a href="#mention_legales"
-                                    class="footer-text">Mention légales</a></div>
-                            <div class="col-sm-6 align-self-center text-muted"><a href="#contact"
-                                    class="footer-text">Contact</a></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Third party plugin JS-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-    </body>
-</html>
