--- a/pur_beurre_project/supersub/templates/supersub/results.html
+++ b/pur_beurre_project/supersub/templates/supersub/results.html
@@ -16,7 +16,7 @@
                 url('{{image}}');
             background-position: center;
             background-attachment: scroll;
-            background-size: contain;
+            background-size: contain;"
             class="searchhead" id="searchhead">
             <div class="container h-100">
                 <div class="row h-100 align-items-center justify-content-center text-center"> 
