--- a/pur_beurre_project/authentification/templates/authentification/create_account.html
+++ b/pur_beurre_project/authentification/templates/authentification/create_account.html
@@ -18,20 +18,20 @@
                 <form action="create_account.html" method="post" novalidate>
                     <div class="form-group align-content-center">
                         <div class="row justify-content-center">
-                            <div class="col-8 pl-2">
+                            <div class="col-8 col-lg-6 pl-2">
                                 <label for="email" class="text-dark">Email</label>
                                 <input type="email" id="email" class="form-control" value="" required>
                             </div>
-                            <div class="col-8 pl-2 pt-4">
+                            <div class="col-8 col-lg-6 pl-2 pt-4">
                                 <label for="pwd" class="text-dark">Mot de passe</label>
                                 <input type="password" id="user_password" class="form-control text-dark" value="" required>
                             </div>
                             <div class="col-8 pl-2 pt-4">
                                 <div class="row text-center">
-                                    <div class="col-6 ">
-                                        <button type="submit" id="create_account_button" class=" btn btn-primary">Se connecter</button>
+                                    <div class="col-sm-6 ">
+                                        <button type="submit" id="create_account_button" class=" btn btn-primary mb-2">Se connecter</button>
                                     </div>
-                                    <div class="col-6">
+                                    <div class="col-sm-6">
                                         <button type="submit" id="create_account_button" class=" btn btn-primary">Créer un compte</button>
                                     </div>
                                 </div>
