--- a/pur_beurre_project/supersub/templates/supersub/index.html
+++ b/pur_beurre_project/supersub/templates/supersub/index.html
@@ -22,7 +22,7 @@
                             </div>
                         </div>
                     {% endif %}
-                    <form action="{% url 'supersub:results'%}" method="get" novalidate>
+                    <form action="{% url 'supersub:results_test'%}" method="get" novalidate>
                         {% csrf_token %}
                         <div class="form-group align-content-end">
                             <div class="row">
