--- a/pur_beurre_project/supersub/templates/supersub/results.html
+++ b/pur_beurre_project/supersub/templates/supersub/results.html
@@ -31,21 +31,21 @@
                 <h4 class="text-dark text-center text-secondary-50 mb-4"> Vous pouvez remplacer ce produit par:  </h4>
                 <hr class="divider my-4" />
                 <div class="row">
-                    {% for product in products %}
+                    {% for paginator in page_object %}
                         <div class="col-lg-4 col-sm-6 text-center">
                             <div class="m-4 results-image">
-                                <a href="{% url 'supersub:product_detail' id_product=product.id %}" class="ele_dark_href">
-                                    <img style="max-height: 80px;"  src=" {{ product.image }} " alt="" />
-                                    <p class="h5 m-1"> {{ product.name }} </p>
+                                <a href="{% url 'supersub:product_detail' id_product=paginator.id %}" class="ele_dark_href">
+                                    <img style="max-height: 80px;"  src=" {{ paginator.image }} " alt="" />
+                                    <p class="h5 m-1"> {{ paginator.name }} </p>
                                 </a>
                                 <div class="nutriscore-circle">
                                     <i class="fas fa-circle"></i>
                                 </div>
                                 <div class="nutriscore-letter text-uppercase">
-                                    <p>{{ product.nutriscore_grade }}</p>
+                                    <p>{{ paginator.nutriscore_grade }}</p>
                                 </div>
                                 {% if user.is_authenticated %}
-                                    <a href="{% url 'supersub:register_product' id_product=product.id id_user=user.id %}" class="ele_dark_href">
+                                    <a href="{% url 'supersub:register_product' id_product=paginator.id id_user=user.id %}" class="ele_dark_href">
                                         <p class="mb-0">
                                             <span>
                                                 <i class="fas fa-save"></i>
@@ -57,10 +57,26 @@
                                         <p class=text-primary> {{mesage}}</p>
                                     {% endif %}
                                 {% endif %}
-
                             </div>
                         </div>
                     {% endfor %}
+                </div>
+                <div class="row">
+                    <div class="pagination">
+                        <span class="step-links">
+                            {% if page_object.has_previous %}
+                            <a href="?page={{ page_object.previous_page_number }}">previous</a>
+                            {% endif %}
+                    
+                            <span class="current">
+                                Page {{ page_object.number }} of {{ page_object.paginator.num_pages }}.
+                            </span>
+                    
+                            {% if page_object.has_next %}
+                            <a href="?page={{ page_object.next_page_number }}">next</a>
+                            {% endif %}
+                        </span>
+                    </div>
                 </div>
             </div>
         </section>
