--- a/pur_beurre_project/supersub/templates/supersub/results_test.html
+++ b/pur_beurre_project/supersub/templates/supersub/results_test.html
@@ -1,4 +1,4 @@
-{% for paginator in page_obj %}
+{% for paginator in page_object %}
 
     {{ paginator.name|upper }}<br>
 
@@ -6,18 +6,16 @@
 
 <div class="pagination">
     <span class="step-links">
-        {% if page_obj.has_previous %}
-        <a href="?page=1">&laquo; first</a>
-        <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        {% if page_object.has_previous %}
+        <a href="?page={{ page_object.previous_page_number }}">previous</a>
         {% endif %}
 
         <span class="current">
-            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+            Page {{ page_object.number }} of {{ page_object.paginator.num_pages }}.
         </span>
 
-        {% if page_obj.has_next %}
-        <a href="?page={{ page_obj.next_page_number }}">next</a>
-        <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+        {% if page_object.has_next %}
+        <a href="?page={{ page_object.next_page_number }}">next</a>
         {% endif %}
     </span>
 </div>
